--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rate Your Landlord</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="normalize.css">
+    <title>Landlord Rating</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Rate Your Landlord</h1>
-    <form id="ratingForm">
-        <label for="landlordName">Landlord Name:</label>
-        <input type="text" id="landlordName" required>
-        
-        <label for="rating">Rating (1-5):</label>
-        <input type="number" id="rating" min="1" max="5" required>
+    <div class="container">
+        <h1>Rate Your Landlord</h1>
+        <form id="ratingForm">
+            <input type="text" id="landlordName" placeholder="Landlord's Name" required>
+            <select id="rating" required>
+                <option value="">Rate</option>
+                <option value="1">1 Star</option>
+                <option value="2">2 Stars</option>
+                <option value="3">3 Stars</option>
+                <option value="4">4 Stars</option>
+                <option value="5">5 Stars</option>
+            </select>
+            <textarea id="comment" placeholder="Leave a comment" required></textarea>
+            <button type="submit">Submit Rating</button>
+        </form>
 
-        <label for="comments">Comments:</label>
-        <textarea id="comments"></textarea>
-        
-        <button type="submit">Submit Rating</button>
-    </form>
-
-    <h2>Ratings:</h2>
-    <ul id="ratingsList"></ul>
+        <h2>Ratings</h2>
+        <div id="ratingsDisplay"></div>
+    </div>
 
     <script src="script.js"></script>
 </body>
